gobmkida/c2/owl_find_lunches
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_find_lunches/src/engine/owl.c:4645:12: error: expected expression
*( _OWORD *)&owl->lunch[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_find_lunches/src/engine/owl.c:4645:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl->lunch[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_find_lunches/src/engine/owl.c:4646:12: error: expected expression
*( _OWORD *)owl->lunch = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_find_lunches/src/engine/owl.c:4646:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)owl->lunch = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_find_lunches/src/obj/1/owl.o] Error 1
